--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.6",
   "description": "TThe JSS-01 | JavaScript Software Synthesizer is a web app enabling you to make and play music in the browser. It is a software synthesizer implementing a variety of JavaScript frameworks and libraries, such as Tone.js and NexusUI.",
   "scripts": {
-    "sass": "node-sass -w scss/ -o css/ --recursive"
+    "sass": "sass --watch sass/style.scss:css/style.min.css --style compressed"
   },
   "repository": {
     "type": "git",
