--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-# JSS-01 | JavaScript Software Synthesizer
+#  JSS-01 |JavaScript Software Synthesizer
+#  Copyright (c) 2022 Michael Kolesidis
+#  GNU General Public License v3.0
 
 # dependencies
 /node_modules
