--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 #  JSS-01 |JavaScript Software Synthesizer
-#  Copyright (c) 2022 Michael Kolesidis
-#  GNU General Public License v3.0
+#  Copyright (c) 2023 Michael Kolesidis
+#  GNU Affero General Public License v3.0
 
 # dependencies
 /node_modules
