--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "javascript-software-synthesizer",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "TThe JSS-01 | JavaScript Software Synthesizer is a web app enabling you to make and play music in the browser. It is a software synthesizer implementing a variety of JavaScript frameworks and libraries, such as Tone.js and NexusUI.",
   "scripts": {
     "build": "tsc --build",
@@ -32,7 +32,7 @@
     "sound-engineering"
   ],
   "author": "Michael Kolesidis",
-  "license": "GPL-3.0-or-later",
+  "license": "AGPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/michaelkolesidis/javascript-software-synthesizer/issues"
   },
