--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 #  JSS-01 |JavaScript Software Synthesizer
-#  Copyright (c) 2023 Michael Kolesidis <michael.kolesidis@gmail.com>
+#  Copyright (c) Michael Kolesidis <michael.kolesidis@gmail.com>
 #  GNU Affero General Public License v3.0
 
 # Logs
